--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ td {
         font-size: 1.5rem;
     }
 
+    /**/
     /* Ajuste das caixas em telas pequenas */
     .container,
     .form-box {
